Fix menu hamburger size e remove font-weight bold on mobile

--- a/app/assets/stylus/prioritize.styl
+++ b/app/assets/stylus/prioritize.styl
@@ -128,7 +128,6 @@ button
         list-style none
         margin 0
         padding 0
-        font-weight bold
 
     .menu-item
         &.current-menu-item a
@@ -146,6 +145,9 @@ button
     @media screen and ( min-width $nav-breakpoint )
         margin-left auto
 
+        .menu
+            font-weight bold
+
         .menu-item
             display inline-block
 
@@ -155,6 +157,8 @@ button
                 padding 3px 0 0
 
 .menu-toggle
+    padding 6px
+
     &:focus
         outline none
 
@@ -183,7 +187,6 @@ button
 
 // Langs
 .langs-navigation
-    font-weight bold
     list-style none
     margin 0
     padding 0
@@ -194,12 +197,11 @@ button
         margin-right 50px
         border-bottom 1px solid transparent
 
+        &.current-menu-item a
+            color $tiffany
+
         &:last-child
             display none
-
-        &.current-menu-item a
-            padding-bottom 3px
-            border-bottom 1px solid $tiffany
 
     .menu-link
         display block
@@ -209,6 +211,7 @@ button
         text-transform uppercase
 
     @media screen and ( min-width $nav-breakpoint )
+        font-weight bold
         margin-left auto
 
         .menu-link
@@ -216,6 +219,11 @@ button
 
         .menu-item
            margin 0 0 0 30px
+
+           &.current-menu-item a
+            color $white
+            padding-bottom 3px
+            border-bottom 1px solid $tiffany
 
            &:last-child
             display inline-block
